<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.dendickys.moviecataloguelocalstorage.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.dendickys.moviecataloguelocalstorage.ui.tvshow.TvShowFragment"
        android:label="@string/title_tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.dendickys.moviecataloguelocalstorage.ui.favorites.FavFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>